<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#BEC3BE"
    android:padding="10dp"
    android:weightSum="10"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:layout_marginTop="70dp"
        android:weightSum="2"
        android:padding="20dp"
        android:background="#C0E1C1">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2"
            >

            <ImageView
                android:id="@+id/play"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:src="@mipmap/play" />
            <TextView
                android:text="@string/activity"
               android:gravity="center"
                android:textStyle="bold"
                android:layout_weight=".5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:weightSum="2"
            >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/day"
                android:textSize="30sp"
                android:textAlignment="center"
                android:autoSizeTextType="uniform"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date"
                android:textSize="80sp"
                android:textAlignment="center"
                android:autoSizeTextType="uniform"
                />

        </LinearLayout>


</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
     android:background="@color/black"
        android:orientation="vertical"
        android:weightSum="2"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"

            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:background="#1B655E"
                android:orientation="vertical"
                android:gravity="center"

               >
                <ImageView
                    android:id="@+id/feed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/list"
                  />
                <TextView
                    android:text="@string/feed"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textColor="#ffff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#1B655E"
                android:orientation="vertical"
                android:gravity="center"
               >
                <ImageView
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/doc"
                    />
                <TextView
                    android:text="@string/folder"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textColor="#ffff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:weightSum="2"
            android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:background="#1B655E"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/folder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/folder"
                        android:scaleType="centerInside"
                        android:layout_gravity="center"
                     />
                    <TextView
                        android:text="@string/folder"
                        android:gravity="center_horizontal"
                        android:textStyle="bold"
                        android:textColor="#ffff"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>


                </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#1B655E"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:src="@mipmap/user" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/profile"
                    android:textColor="#ffff"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>